tests/ui/compile_error_macro.rs
fn main() {
    compile_error!("a very descriptive error message"); //~ ERROR: a very descriptive error message
}
